Finished Lesson 1 Task 1 I forgot before

--- a/homework/lesson1/les1_homework.ipynb
+++ b/homework/lesson1/les1_homework.ipynb
@@ -40,11 +40,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Kendall’s tau rank correlation coefficient.\n",
+    "- Spearman’s rho rank correlation coefficient.\n",
+    "- Coverage - покрытие датасета рекомендациями, доля.\n",
+    "- Personalization - насколько различны рекомендации для разных пользователей.\n",
+    "- Intra-list similarity - насколько похожи между собой сделанные рекомендации (средняя cosine близость).\n",
+    "- Expected Reciprocal Rank (ERR).\n",
+    "- Pfound (Яндекса)."
+   ]
   },
   {
    "cell_type": "markdown",
