Reset the changes to avoid pushing >100 MB file

--- a/homework/lesson1/les1_homework.ipynb
+++ b/homework/lesson1/les1_homework.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hit_rate_at_k(recommended_list, bought_list, k=5):\n",
-    "    bought_list = np.array(bought_list)\n",
-    "    recommended_list = np.array(recommended_list)[:k]\n",
-    "    \n",
-    "    flags = np.isin(bought_list, recommended_list)\n",
-    "    return int(flags.sum() > 0)"
+    "    return hit_rate(recommended_list[:k], bought_list)"
    ]
   },
   {
@@ -127,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +142,7 @@
        "0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +162,7 @@
        "1"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,16 +212,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def precision_at_k(recommended_list, bought_list, k=5):\n",
-    "    bought_list = np.array(bought_list)\n",
-    "    recommended_list = np.array(recommended_list)[:k]\n",
-    "    \n",
-    "    flags = np.isin(recommended_list, bought_list)\n",
-    "    return flags.sum() / recommended_list.shape[0]"
+    "    return precision(recommended_list[:k], bought_list)"
    ]
   },
   {
@@ -320,7 +312,6 @@
    "outputs": [],
    "source": [
     "def recall(recommended_list, bought_list):\n",
-    "    \n",
     "    bought_list = np.array(bought_list)\n",
     "    recommended_list = np.array(recommended_list)\n",
     "    \n",
@@ -337,16 +328,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def recall_at_k(recommended_list, bought_list, k=5):\n",
-    "    bought_list = np.array(bought_list)\n",
-    "    recommended_list = np.array(recommended_list)[:k]\n",
-    "    \n",
-    "    flags = np.isin(bought_list, recommended_list)\n",
-    "    return flags.sum() / bought_list.shape[0]"
+    "    return recall(recommended_list[:k], bought_list)"
    ]
   },
   {
