Finished main part of Lesson 2 homework

--- a/homework/lesson2/les2_homework.ipynb
+++ b/homework/lesson2/les2_homework.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -192,7 +192,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>[  821867   834484   856942   865456   889248 ...</td>\n",
+       "      <td>[821867, 834484, 856942, 865456, 889248, 90795...</td>\n",
        "      <td>[17214934, 12352370, 12158320, 846735, 1121862]</td>\n",
        "      <td>[6534178, 6533889, 1029743, 6534166, 1082185]</td>\n",
        "      <td>[6666, 1082185, 981760, 1127831, 995242]</td>\n",
@@ -202,7 +202,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3</td>\n",
-       "      <td>[  835476   851057   872021   878302   879948 ...</td>\n",
+       "      <td>[835476, 851057, 872021, 878302, 879948, 90963...</td>\n",
        "      <td>[857381, 10461735, 904375, 1120777, 392314]</td>\n",
        "      <td>[6534178, 6533889, 1029743, 6534166, 1082185]</td>\n",
        "      <td>[6666, 1082185, 981760, 1098066, 995242]</td>\n",
@@ -215,8 +215,8 @@
       ],
       "text/plain": [
        "   user_id                                             actual  \\\n",
-       "0        1  [  821867   834484   856942   865456   889248 ...   \n",
-       "1        3  [  835476   851057   872021   878302   879948 ...   \n",
+       "0        1  [821867, 834484, 856942, 865456, 889248, 90795...   \n",
+       "1        3  [835476, 851057, 872021, 878302, 879948, 90963...   \n",
        "\n",
        "                             random_recommendation  \\\n",
        "0  [17214934, 12352370, 12158320, 846735, 1121862]   \n",
@@ -239,14 +239,37 @@
        "1   [1082185, 981760, 1098066, 826249, 6666]  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = pd.read_csv('predictions_basic.csv')\n",
+    "result = pd.read_pickle('predictions_basic.pkl')\n",
     "result.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "<class 'list'>\n",
+      "<class 'list'>\n",
+      "<class 'list'>\n",
+      "<class 'list'>\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in result.columns[1:]:\n",
+    "    print(type(result[col].iloc[0]))"
    ]
   },
   {
@@ -466,14 +489,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 11.4 s\n"
+      "Wall time: 4.3 s\n"
      ]
     },
     {
@@ -511,24 +534,24 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>[  821867   834484   856942   865456   889248 ...</td>\n",
+       "      <td>[821867, 834484, 856942, 865456, 889248, 90795...</td>\n",
        "      <td>[17214934, 12352370, 12158320, 846735, 1121862]</td>\n",
        "      <td>[6534178, 6533889, 1029743, 6534166, 1082185]</td>\n",
        "      <td>[6666, 1082185, 981760, 1127831, 995242]</td>\n",
        "      <td>[1082185, 6666, 981760, 1127831, 1098066]</td>\n",
        "      <td>[1082185, 981760, 1127831, 6666, 1098066]</td>\n",
-       "      <td>[9419419, 573302, 853690, 1133754, 978657]</td>\n",
+       "      <td>[828732, 6555617, 958218, 13417835, 15830893]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3</td>\n",
-       "      <td>[  835476   851057   872021   878302   879948 ...</td>\n",
+       "      <td>[835476, 851057, 872021, 878302, 879948, 90963...</td>\n",
        "      <td>[857381, 10461735, 904375, 1120777, 392314]</td>\n",
        "      <td>[6534178, 6533889, 1029743, 6534166, 1082185]</td>\n",
        "      <td>[6666, 1082185, 981760, 1098066, 995242]</td>\n",
        "      <td>[1082185, 1098066, 981760, 6666, 826249]</td>\n",
        "      <td>[1082185, 981760, 1098066, 826249, 6666]</td>\n",
-       "      <td>[1030522, 903398, 854456, 1886755, 975940]</td>\n",
+       "      <td>[12695533, 954759, 1202678, 72163, 822325]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -536,8 +559,8 @@
       ],
       "text/plain": [
        "   user_id                                             actual  \\\n",
-       "0        1  [  821867   834484   856942   865456   889248 ...   \n",
-       "1        3  [  835476   851057   872021   878302   879948 ...   \n",
+       "0        1  [821867, 834484, 856942, 865456, 889248, 90795...   \n",
+       "1        3  [835476, 851057, 872021, 878302, 879948, 90963...   \n",
        "\n",
        "                             random_recommendation  \\\n",
        "0  [17214934, 12352370, 12158320, 846735, 1121862]   \n",
@@ -559,12 +582,12 @@
        "0  [1082185, 981760, 1127831, 6666, 1098066]   \n",
        "1   [1082185, 981760, 1098066, 826249, 6666]   \n",
        "\n",
-       "                      w_random_recommendation  \n",
-       "0  [9419419, 573302, 853690, 1133754, 978657]  \n",
-       "1  [1030522, 903398, 854456, 1886755, 975940]  "
+       "                         w_random_recommendation  \n",
+       "0  [828732, 6555617, 958218, 13417835, 15830893]  \n",
+       "1     [12695533, 954759, 1202678, 72163, 822325]  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,15 +612,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "_0cu0VeTC8ZD"
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# your_code"
+    "from metrics import precision_at_k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1.89 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# your_code\n",
+    "rec_metrics = {}\n",
+    "for col in result.columns[1:]:\n",
+    "    rec_metrics[col] = round(result.apply(lambda row: precision_at_k(row[col], row['actual']), axis=1).mean(), 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "      <th>random_recommendation</th>\n",
+       "      <th>popular_recommendation</th>\n",
+       "      <th>itemitem</th>\n",
+       "      <th>cosine</th>\n",
+       "      <th>tfidf</th>\n",
+       "      <th>w_random_recommendation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0006</td>\n",
+       "      <td>0.1552</td>\n",
+       "      <td>0.1368</td>\n",
+       "      <td>0.1329</td>\n",
+       "      <td>0.139</td>\n",
+       "      <td>0.0012</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   actual  random_recommendation  popular_recommendation  itemitem  cosine  \\\n",
+       "0     1.0                 0.0006                  0.1552    0.1368  0.1329   \n",
+       "\n",
+       "   tfidf  w_random_recommendation  \n",
+       "0  0.139                   0.0012  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(pd.Series(rec_metrics)).T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Weighted Random Recommendation показал себя в 2 раза лучше, чем Random Recommendation, но все равно плохо по сравнению с остальными."
    ]
   },
   {
