Styled Lesson 2 homework a bit better

--- a/homework/lesson2/les2_homework.ipynb
+++ b/homework/lesson2/les2_homework.ipynb
@@ -753,7 +753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Random recommendation"
+    "**1. Random recommendation**"
    ]
   },
   {
@@ -897,7 +897,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Popularity-based recommendation"
+    "**2. Popularity-based recommendation**"
    ]
   },
   {
@@ -1053,7 +1053,7 @@
     "id": "zlUUzLFeC8Y4"
    },
    "source": [
-    "### 1.3 Weighted Random Recommendation"
+    "**3. Weighted Random Recommendation**"
    ]
   },
   {
