Started Lesson 3 homework

--- a/homework/lesson2/les2_homework.ipynb
+++ b/homework/lesson2/les2_homework.ipynb
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('retail_train.csv')\n",
+    "data = pd.read_csv('../data/retail_train.csv')\n",
     "data.head(2)"
    ]
   },
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "result = pd.read_pickle('predictions_basic.pkl')\n",
+    "result = pd.read_pickle('../data/predictions_basic.pkl')\n",
     "result.head(2)"
    ]
   },
