Completed Lesson 3 homework Task 1

--- a/homework/lesson3/les3_homework.ipynb
+++ b/homework/lesson3/les3_homework.ipynb
@@ -70,20 +70,27 @@
     "\n",
     "9. А точно нужно сортировать по вероятности?\n",
     "\n",
+    "Стоит сортировать не по вероятности, а по потенциальной выручке с товара - выручка с товара * вероятность.\n",
     "\n",
     "10. Какую метрику использовать?\n",
     "\n",
+    "Money precision - она учитывает то, что мы рекомендуем именно релевантные товары, а также стоимость каждого рекомендованного товара.\n",
     "\n",
     "11. Сколько раз в неделю отправляем рассылку?\n",
-    "2 раза в неделю вполне достаточно: 1. днем пятницы, перед закупкой продуктов на выходных, 2. в середине недели, примерно во вторник, для подогрева интереса и покупки более мелких, импульсивных товаров.\n",
+    "\n",
+    "2 раза в неделю вполне достаточно: 1. В пятницу, перед большой закупкой продуктов на выходных, 2. В середине недели, примерно во вторник, для подогрева интереса и покупки более мелких, импульсивных товаров.\n",
     "\n",
     "12. В какое время отправляем рассылку?\n",
-    "В пятницу - утром или днем, чтобы увидели перед походом в магазин или онлайн-заказом. Во вторник - перед концом рабочего дня.\n",
     "\n",
-    "13. Будем отправлять одному юзеру много раз наши рекоммендации. Как добиться того, чтобы они хоть немного отличались?\n",
+    "В пятницу - утром или днем, чтобы увидели перед походом в магазин, а если пользователь заказывает онлайн - вечером пятницы или днем субботы. Во вторник - примерно за 1-2 часа до конца рабочего дня.\n",
+    "\n",
+    "13. Будем отправлять одному юзеру много раз наши рекомендации. Как добиться того, чтобы они хоть немного отличались?\n",
+    "\n",
     "Можно рекомендовать не самый топ-10 товаров, а набирать 10 товаров из топ-5 или топ-7 товаров наиболее интересующих пользователя категорий. Таким образом, будет некий запас товаров, благодаря которым можно варьировать рекомендации. Еще один способ - дать некоторым категориям товаров увеличенный вес в соответствии со днем недели рассылки. Например, рекомендовать больше сладостей и закусок в середине недели, а хозяйственные товары оставить на конец недели.\n",
     "\n",
-    "14. Нужно ли, чтобы в одной рассылке были *разные* товары? Как определить, что товары *разные*? Как добиться того, чтобы они были разными?\n"
+    "14. Нужно ли, чтобы в одной рассылке были *разные* товары? Как определить, что товары *разные*? Как добиться того, чтобы они были разными?\n",
+    "\n",
+    "Да, не стоит рекомендовать 5 различных брендов молока. \"Разные\" товары - те, которые при покупке пользователем первого товара не сильно влияют на покупку второго товара. Пример - вряд ли пользователь купит 2 разных вида молока, он просто возьмет 1 из них, другая рекомендация окажется бесполезной в повышении суммы продаж. Вместо этой бесполезной рекомендации стоит показать товар другой группы - хлеб, к примеру. Добить \"разности\" товаров можно с помощью ограничения на вхождение в рекомендации товаров каждой категории (напр. макс 1-2 молочных товара). Также можно найти \"похожие\" товары с помощью близости их векторов - если она выше определенного порога, то не рекомендуем эти товары вместе. Еще один вариант - посмотреть в датасете, какие товары никогда или очень редко покупаются вместе - они могут быть слишком похожи. Последний метод можно также объединить с методом подсчета близости векторов товаров."
    ]
   },
   {
