--- a/homework/lesson4/les4_homework.ipynb
+++ b/homework/lesson4/les4_homework.ipynb
@@ -17,9 +17,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from scipy.sparse import csr_matrix\n",
-    "\n",
-    "from utils import prefilter_items"
+    "from scipy.sparse import csr_matrix"
    ]
   },
   {
@@ -46,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "2IhaU8JDIHyi",
     "outputId": "a3a22636-04a2-4ad4-9774-e0c5cbcd6a09"
@@ -75,42 +73,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>basket_id</th>\n",
+       "      <th>day</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>sales_value</th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>retail_disc</th>\n",
+       "      <th>trans_time</th>\n",
+       "      <th>week_no</th>\n",
+       "      <th>coupon_disc</th>\n",
+       "      <th>coupon_match_disc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2375</td>\n",
+       "      <td>26984851472</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1004906</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>364</td>\n",
+       "      <td>-0.60</td>\n",
+       "      <td>1631</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2375</td>\n",
+       "      <td>26984851472</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1033142</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>364</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1631</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2375</td>\n",
+       "      <td>26984851472</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1036325</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>364</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>1631</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2375</td>\n",
+       "      <td>26984851472</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1082185</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.21</td>\n",
+       "      <td>364</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1631</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2375</td>\n",
+       "      <td>26984851472</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8160430</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>364</td>\n",
+       "      <td>-0.39</td>\n",
+       "      <td>1631</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id    basket_id  day  item_id  quantity  sales_value  store_id  \\\n",
+       "0     2375  26984851472    1  1004906         1         1.39       364   \n",
+       "1     2375  26984851472    1  1033142         1         0.82       364   \n",
+       "2     2375  26984851472    1  1036325         1         0.99       364   \n",
+       "3     2375  26984851472    1  1082185         1         1.21       364   \n",
+       "4     2375  26984851472    1  8160430         1         1.50       364   \n",
+       "\n",
+       "   retail_disc  trans_time  week_no  coupon_disc  coupon_match_disc  \n",
+       "0        -0.60        1631        1          0.0                0.0  \n",
+       "1         0.00        1631        1          0.0                0.0  \n",
+       "2        -0.30        1631        1          0.0                0.0  \n",
+       "3         0.00        1631        1          0.0                0.0  \n",
+       "4        -0.39        1631        1          0.0                0.0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "user_item_matrix = pd.pivot_table(data_train, \n",
-    "                                  index='user_id', columns='item_id', \n",
-    "                                  values='quantity', # Можно пробоват ьдругие варианты\n",
-    "                                  aggfunc='count', \n",
-    "                                  fill_value=0\n",
-    "                                 )\n",
-    "\n",
-    "user_item_matrix = user_item_matrix.astype(float) # необходимый тип матрицы для implicit\n",
-    "\n",
-    "# переведем в формат saprse matrix\n",
-    "sparse_user_item = csr_matrix(user_item_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "id": "TiPuXLb7IHym"
-   },
-   "outputs": [],
-   "source": [
-    "userids = user_item_matrix.index.values\n",
-    "itemids = user_item_matrix.columns.values\n",
-    "\n",
-    "matrix_userids = np.arange(len(userids))\n",
-    "matrix_itemids = np.arange(len(itemids))\n",
-    "\n",
-    "id_to_itemid = dict(zip(matrix_itemids, itemids))\n",
-    "id_to_userid = dict(zip(matrix_userids, userids))\n",
-    "\n",
-    "itemid_to_id = dict(zip(itemids, matrix_itemids))\n",
-    "userid_to_id = dict(zip(userids, matrix_userids))"
+    "data_train.head()"
    ]
   },
   {
@@ -137,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prefilter_items(data, item_features=None, take_n_popular=None):\n",
+    "def prefilter_items(data, take_n_popular=None):\n",
     "    # Уберем самые популярные товары (их и так купят)\n",
     "    popularity = (data.groupby('item_id')['user_id'].nunique() / data['user_id'].nunique()).reset_index()\n",
     "    popularity.rename(columns={'user_id': 'share_unique_users'}, inplace=True)    \n",
@@ -174,7 +277,7 @@
     "    if take_n_popular is not None:\n",
     "        items_sold = data.groupby('item_id')['quantity'].sum().reset_index()\n",
     "        top_5000 = items_sold.sort_values('quantity', ascending=False).iloc[:take_n_popular]['item_id'].unique()\n",
-    "        data = data[data['item_id'].isin(top_5000)]\n",
+    "        data.loc[~data['item_id'].isin(top_5000), 'item_id'] = 999999\n",
     "    \n",
     "    return data"
    ]
@@ -196,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,32 +325,68 @@
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self, data, weighting=True):\n",
-    "        \n",
     "        # your_code. Это не обязательная часть. Но если вам удобно что-либо посчитать тут - можно это сделать\n",
-    "        \n",
     "        self.user_item_matrix = self.prepare_matrix(data)  # pd.DataFrame\n",
-    "        self.id_to_itemid, self.id_to_userid, \\ \n",
-    "            self.itemid_to_id, self.userid_to_id = prepare_dicts(self.user_item_matrix)\n",
+    "        self.id_to_itemid, self.id_to_userid, \\\n",
+    "            self.itemid_to_id, self.userid_to_id = self.prepare_dicts(self.user_item_matrix)\n",
     "        \n",
     "        if weighting:\n",
-    "            self.user_item_matrix = bm25_weight(self.user_item_matrix.T).T \n",
+    "            self.user_item_matrix = bm25_weight(self.user_item_matrix.T).T\n",
     "        \n",
     "        self.model = self.fit(self.user_item_matrix)\n",
     "        self.own_recommender = self.fit_own_recommender(self.user_item_matrix)\n",
     "     \n",
     "    @staticmethod\n",
     "    def prepare_matrix(data):\n",
-    "        \n",
     "        # your_code\n",
+    "        data = MainRecommender.prefilter_items(data, take_n_popular=5000)\n",
     "        user_item_matrix = pd.pivot_table(data,\n",
     "                                          index='user_id',\n",
     "                                          columns='item_id',\n",
     "                                          values='quantity',\n",
     "                                          aggfunc='count',\n",
     "                                          fill_value=0)\n",
-    "        user_item_matrix = csr_matrix(user_item_matrix.astype(float))\n",
+    "        user_item_matrix = user_item_matrix.astype(float)\n",
     "        \n",
     "        return user_item_matrix\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def prefilter_items(data, take_n_popular=None):\n",
+    "        # Уберем самые популярные товары (их и так купят)\n",
+    "        popularity = (data.groupby('item_id')['user_id'].nunique() / data['user_id'].nunique()).reset_index()\n",
+    "        popularity.rename(columns={'user_id': 'share_unique_users'}, inplace=True)    \n",
+    "\n",
+    "        top_popular = popularity[popularity['share_unique_users'] > 0.5]['item_id'].unique()\n",
+    "        data = data[~data['item_id'].isin(top_popular)]\n",
+    "\n",
+    "        # Уберем самые НЕ популярные товары (их и так НЕ купят)\n",
+    "        top_notpopular = popularity[popularity['share_unique_users'] < 0.01]['item_id'].unique()\n",
+    "        data = data[~data['item_id'].isin(top_notpopular)]\n",
+    "\n",
+    "        # Уберем товары, которые не продавались за последние 12 месяцев\n",
+    "        last_week_no = np.sort(data['week_no'].unique())[-1]\n",
+    "        sold_this_year = data[data['week_no'] > (last_week_no - 52)]['item_id'].unique()\n",
+    "        data = data[data['item_id'].isin(sold_this_year)]\n",
+    "\n",
+    "        # Уберем слишком дешевые товары (на них не заработаем). 1 покупка из рассылок стоит 60 руб. \n",
+    "        prices = data[['item_id']]\n",
+    "        prices['price'] = data['sales_value'] / data['quantity']\n",
+    "        prices = prices.groupby('item_id')['price'].mean().reset_index()\n",
+    "\n",
+    "        cheap_items = prices.loc[prices['price'] < prices['price'].quantile(0.05)]['item_id'].unique()\n",
+    "        data = data[~data['item_id'].isin(cheap_items)]\n",
+    "\n",
+    "        # Уберем слишком дорогие товарыs\n",
+    "        expensive_items = prices.loc[prices['price'] > prices['price'].quantile(0.95)]['item_id'].unique()\n",
+    "        data = data[~data['item_id'].isin(expensive_items)]\n",
+    "\n",
+    "        # Возьмем только топ 5000 популярных товаров из оставшихся\n",
+    "        if take_n_popular is not None:\n",
+    "            items_sold = data.groupby('item_id')['quantity'].sum().reset_index()\n",
+    "            top_5000 = items_sold.sort_values('quantity', ascending=False).iloc[:take_n_popular]['item_id'].unique()\n",
+    "            data.loc[~data['item_id'].isin(top_5000), 'item_id'] = 999999\n",
+    "\n",
+    "        return data\n",
     "    \n",
     "    @staticmethod\n",
     "    def prepare_dicts(user_item_matrix):\n",
@@ -277,14 +416,14 @@
     "        return own_recommender\n",
     "    \n",
     "    @staticmethod\n",
-    "    def fit(user_item_matrix, n_factors=20, regularization=0.001, iterations=15, num_threads=4):\n",
+    "    def fit(user_item_matrix, factors=20, regularization=0.001, iterations=15, num_threads=4):\n",
     "        \"\"\"Обучает ALS\"\"\"\n",
     "        \n",
     "        model = AlternatingLeastSquares(factors=factors, \n",
     "                                             regularization=regularization,\n",
     "                                             iterations=iterations,  \n",
     "                                             num_threads=num_threads)\n",
-    "        model.fit(csr_matrix(self.user_item_matrix).T.tocsr())\n",
+    "        model.fit(csr_matrix(user_item_matrix).T.tocsr())\n",
     "        \n",
     "        return model\n",
     "\n",
@@ -293,25 +432,47 @@
     "\n",
     "        # your_code\n",
     "        # Практически полностью реализовали на прошлом вебинаре\n",
-    "\n",
+    "        # Берем топ-N покупок юзера, для каждой из них рекомендуем ближайший (самый похожий) товар\n",
+    "        \n",
+    "        top_n_items = pd.DataFrame(self.user_item_matrix.toarray()).loc[self.userid_to_id[user]]\\\n",
+    "                                                                   .sort_values(ascending=False)[:N].index.tolist()\n",
+    "        res = [id_to_itemid[self.model.similar_items(item, N=2)[1][0]] for item in top_n_items]\n",
+    "        \n",
     "        assert len(res) == N, 'Количество рекомендаций != {}'.format(N)\n",
     "        return res\n",
     "    \n",
     "    def get_similar_users_recommendation(self, user, N=5):\n",
-    "    \"\"\"Рекомендуем топ-N товаров, среди купленных похожими юзерами\"\"\"\n",
+    "        \"\"\"Рекомендуем топ-N товаров, среди купленных похожими юзерами\"\"\"\n",
     "    \n",
     "        # your_code\n",
+    "        # Находим топ-N наиболее похожих пользователей\n",
+    "        # От каждого пользователя берем их топ товар и рекомендуем\n",
+    "        n_similar_users = 5\n",
+    "    \n",
+    "        similar_users = [self.id_to_userid[row_id] \n",
+    "                         for row_id, _ in self.model.similar_users(self.userid_to_id[user], N=n_similar_users+1)][1:]\n",
+    "\n",
+    "        top_items = pd.Series()\n",
+    "        for sim_user in similar_users:\n",
+    "            top_n_items = pd.DataFrame(self.user_item_matrix.toarray()).loc[self.userid_to_id[sim_user]]\\\n",
+    "                                                                       .sort_values(ascending=False)[:N]\n",
+    "            top_items = top_items.append(top_n_items)\n",
+    "\n",
+    "        # Усредняем дубликаты\n",
+    "        top_items = top_items.reset_index().groupby('index')[0].mean()\n",
+    "\n",
+    "        res = top_items.sort_values(ascending=False)[:5].index.tolist()\n",
     "\n",
     "        assert len(res) == N, 'Количество рекомендаций != {}'.format(N)\n",
     "        return res"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "+"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -330,16 +491,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function precision_at_k at 0x00000191431A63A0>\n",
-      "<function recall_at_k at 0x00000191431A64C0>\n",
-      "<function prefilter_items at 0x0000019112B86790>\n"
+      "<function precision_at_k at 0x000001A80255F820>\n",
+      "<function recall_at_k at 0x000001A80255F940>\n",
+      "<function prefilter_items at 0x000001A80255FE50>\n",
+      "<class 'recommenders.MainRecommender'>\n"
      ]
     }
    ],
